applications/faq/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faq
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: faq
  template:
    metadata:
      labels:
        app: faq
    spec:
      containers:
        - name: faq
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
          - name: faq-config
            mountPath: /usr/share/nginx/html
      volumes:
        - name: faq-config
          configMap:
            name: faq-config
