applications/faq/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faq
spec:
  type: ClusterIP
  selector:
    app: faq
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
