applications/faq/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faq
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: faq-faq-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - faq.tryrocket.cloud
      secretName: tryrocket-cloud-tls
  rules:
    - host: faq.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faq
                port:
                  name: http
